bootstrap/addon-configs/traefik-dashboard/traefik-dashboard-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-stripprefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - "/dashboard"
