bootstrap/addon-configs/traefik-dashboard/traefik-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("traefik.helix") && PathPrefix("/dashboard/")
      kind: Rule
      middlewares:
        - name: dashboard-stripprefix
      services:
        - name: api@internal
  tls:
    secretName: traefik-dashboard-tls
